add: header section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 <body>
     <!-- !HEADING -->
     <header>
-
+        <section class="goldenrod width flex">
+            <div class="logo">logo</div>
+            <nav class="navigation">
+                <ul class="flex">
+                    <li><a href="">link</a></li>
+                    <li><a href="">link</a></li>
+                    <li><a href="">link</a></li>
+                    <li><a href="">link</a></li>
+                    <li><a href="">link</a></li>
+                </ul>
+            </nav>
+            <div class="login">login</div>
+        </section>
     </header>
     <!-- !HEADING -->
 
