add: section blue

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <!-- !MAIN -->
     <main>
         <!-- Section Blue -->
-        <section></section>
+        <section class="blue width flex">
+            <div class="violet"></div>
+        </section>
 
         <!--  Alternated Section-->
         <section></section>
