add: main section

--- a/index.html
+++ b/index.html
@@ -31,15 +31,32 @@
     <!-- !MAIN -->
     <main>
         <!-- Section Blue -->
-        <section class="blue width flex">
+        <section class="blue bar flex">
             <div class="violet"></div>
         </section>
 
         <!--  Alternated Section-->
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="white bar flex">
+            <div class="width flex">
+                <div class="cadetblue box"></div>
+                <div class="pink box"></div>
+            </div>
+        </section>
+        <section class="grey bar flex">
+            <div class="width reverse flex">
+                <div class="cadetblue box"></div>
+                <div class="pink box"></div>
+            </div>
+        </section>
+        <section class="white bar flex">
+            <div class="width flex">
+                <div class="cadetblue box"></div>
+                <div class="pink box"></div>
+            </div>
+        </section>
+        <section class="grey bar flex">
+            <div class="green width"></div>
+        </section>
 
         
     </main>
