add: footer incomplete

--- a/index.html
+++ b/index.html
@@ -63,9 +63,15 @@
     <!-- !MAIN -->
 
     <!-- !FOOTER -->
-    <footer>
+    <footer class="flex">
         <!-- Column Section -->
-        <section></section>
+        <section class="row width flex">
+            <div class="coral box"></div>
+            <div class="aquamarine"></div>
+            <div class="aquamarine"></div>
+            <div class="aquamarine"></div>
+            <div class="aquamarine"></div>
+        </section>
 
         <!-- Bottom Section -->
         <section></section>
