add: column section footer

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- !MAIN -->
 
     <!-- !FOOTER -->
-    <footer class="flex">
+    <footer>
         <!-- Column Section -->
         <section class="row width flex">
             <div class="coral box"></div>
@@ -74,7 +74,10 @@
         </section>
 
         <!-- Bottom Section -->
-        <section></section>
+        <section class="banner width flex">
+            
+
+        </section>
 
     </footer>
     <!-- !FOOTER -->
