add: bottom section footer / repo completed

--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
         </section>
 
         <!-- Bottom Section -->
-        <section class="banner width flex">
-            
+        <section class="border">
 
+            <div class="banner width flex">
+                <div class="rectangle left">Logo</div>
+                <div class="rectangle right">Bottone</div>
+                
+            </div>
         </section>
 
     </footer>
