--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <!-- !HEADING -->
-    <header>
-        <section class="goldenrod width flex">
-            <div class="logo">logo</div>
-            <nav class="navigation">
-                <ul class="flex">
+    <header class="skyblue-row flex line">
+        <section class="orange width flex">
+            <div class="dashed logo">logo</div>
+            <nav class="dashed navigation">
+                <ul class="menu flex">
                     <li><a href="">link</a></li>
                     <li><a href="">link</a></li>
                     <li><a href="">link</a></li>
@@ -23,7 +23,7 @@
                     <li><a href="">link</a></li>
                 </ul>
             </nav>
-            <div class="login">login</div>
+            <div class="dashed login">login</div>
         </section>
     </header>
     <!-- !HEADING -->
@@ -31,31 +31,31 @@
     <!-- !MAIN -->
     <main>
         <!-- Section Blue -->
-        <section class="blue bar flex">
-            <div class="violet"></div>
+        <section class="blue-row flex line">
+            <div class="dashed small violet"></div>
         </section>
 
         <!--  Alternated Section-->
-        <section class="white bar flex">
+        <section class="white-row flex line">
             <div class="width flex">
-                <div class="cadetblue box"></div>
-                <div class="pink box"></div>
+                <div class="dashed medium blue"></div>
+                <div class="dashed medium pink"></div>
             </div>
         </section>
-        <section class="grey bar flex">
+        <section class="grey-row flex line">
             <div class="width reverse flex">
-                <div class="cadetblue box"></div>
-                <div class="pink box"></div>
+                <div class="dashed medium blue"></div>
+                <div class="dashed medium pink"></div>
             </div>
         </section>
-        <section class="white bar flex">
+        <section class="white-row flex line">
             <div class="width flex">
-                <div class="cadetblue box"></div>
-                <div class="pink box"></div>
+                <div class="dashed medium blue"></div>
+                <div class="dashed medium pink"></div>
             </div>
         </section>
-        <section class="grey bar flex">
-            <div class="green width"></div>
+        <section class="grey-row flex line">
+            <div class="dashed big green width"></div>
         </section>
 
         
@@ -63,23 +63,23 @@
     <!-- !MAIN -->
 
     <!-- !FOOTER -->
-    <footer>
+    <footer class="black-row">
         <!-- Column Section -->
-        <section class="row width flex">
-            <div class="coral box"></div>
-            <div class="aquamarine"></div>
-            <div class="aquamarine"></div>
-            <div class="aquamarine"></div>
-            <div class="aquamarine"></div>
+        <section class="flex line top">
+            <div class="width flex">
+                <div class="dashed medium coral"></div>
+                <div class="dashed medium cadetblue"></div> <!-- add: white dashed border -->
+                <div class="dashed medium cadetblue"></div> <!-- add: white dashed border -->
+                <div class="dashed medium cadetblue"></div> <!-- add: white dashed border -->
+                <div class="dashed medium cadetblue"></div> <!-- add: white dashed border -->
+            </div>
         </section>
 
         <!-- Bottom Section -->
-        <section class="border">
-
-            <div class="banner width flex">
-                <div class="rectangle left">Logo</div>
-                <div class="rectangle right">Bottone</div>
-                
+        <section class="flex line bottom"> <!-- add: border top/bottom -->
+            <div class="aquamarine width flex">
+                <div class="dashed fuchsia left">Logo</div>
+                <div class="dashed fuchsia right">Bottone</div>
             </div>
         </section>
 
